--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <title>AI 原生 ERP · 采购模块 API（Phase 1 冻结版）</title>
-  <link rel="stylesheet" href="./swagger-ui/swagger-ui.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>ERP 系统 API 文档 - Phase 1</title>
+    <!-- 改这里：去掉 @5 -->
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist/swagger-ui.css" />
+    <style>
+      body { margin: 0; }
+    </style>
+  </head>
+  <body>
+    <div id="swagger-ui"></div>
 
-<body>
-  <div id="swagger-ui"></div>
+    <!-- 改这里：去掉 @5 -->
+    <script src="https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js"></script>
+    <script src="https://unpkg.com/swagger-ui-dist/swagger-ui-standalone-preset.js"></script>
 
-  <script src="./swagger-ui/swagger-ui-bundle.js"></script>
-  <script src="./swagger-ui/swagger-ui-standalone-preset.js"></script>
-  <script>
-    window.onload = function () {
-      SwaggerUIBundle({
-        url: "./openapi.yaml",
-        dom_id: "#swagger-ui",
-        presets: [
-          SwaggerUIBundle.presets.apis,
-          SwaggerUIStandalonePreset
-        ],
-        layout: "BaseLayout",
-        deepLinking: true
-      });
-    };
-  </script>
-</body>
+    <script>
+      window.onload = function () {
+        const ui = SwaggerUIBundle({
+          url: "openapi.yaml",  // 确保这个文件名正确，且和 index.html 同目录
+          dom_id: '#swagger-ui',
+          presets: [
+            SwaggerUIBundle.presets.apis,
+            SwaggerUIStandalonePreset
+          ],
+          layout: "BaseLayout"
+        });
+      };
+    </script>
+  </body>
 </html>
 
